tests/bad/scope1.go
package main

func main() {
    {var x = 5}
    y := x
}
